docs/src/articles/kubernetes/3.basic/resources/docker.registry/insecure.docker.registry.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-insecure-docker-registry-ingress
  labels:
    app.kubernetes.io/name: docker-registry-ingress
    app.kubernetes.io/instance: my-docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
spec:
  rules:
    - host: insecure.docker.registry.local
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-docker-registry
                port:
                  number: 5000
